--- a/site/style.css
+++ b/site/style.css
@@ -1,3 +1,24 @@
-h3 {
- background-color: red;
+body {
+	font-family: Helvetica;
+ }
+
+section {
+  border: 1px solid black;
+  background-color: #A52A2A;
+  width: 90%;
+  height: 150px;
+  margin-right: auto;
+  margin-left: auto;
+  }
+
+#header1 {
+  background-color: red;
+}
+
+#header2 {
+ background-color: blue;
+}
+
+#header1 {
+ background-color: green;
 }
