--- a/site/style.css
+++ b/site/style.css
@@ -1,119 +1,97 @@
 body {
 	font-family: Helvetica;
-	background-color: #C2B8B2;
  }
 
- @media (min-width: 1200px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-    border: 1px solid green;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
-}
-
-@media (min-width: 992px) and (max-width: 1199px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-    border: 1px solid green;
-  }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
+ * {
+  box-sizing: border-box;
 }
 
 h1 {
-	text-align: center
+	text-align: center;
 	font-color: #204B57;
+  font-style: bold;
  }
 
-section {
+.box {
+  float: left;
+  border: 10px solid rgb(255, 255, 255);
+  background-color: gray;
+}
+
+.inside_box {
   border: 1px solid black;
-  background-color: #204B57;
-  font-color: #C2B8B2;
- }
+}
+
+p {
+  padding: 10px;
+}
+
+@media (min-width: 992px) {
+  .box_1 {
+    width: 33.33%;
+  }
+  .box_2 {
+    width: 33.33%;
+  }
+  .box_3 {
+    width: 33.33%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .box_1 {
+    width: 50%;
+  }
+  .box_2 {
+    width: 50%;
+  }
+  .box_3 {
+    width: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .box_1 {
+    width: 100%;
+  }
+  .box_2 {
+    width: 100%;
+  }
+  .box_3 {
+    width: 100%;
+  }
+}
 
 #header1 {
-  background-color: #125E8A;
-  font-color: white;
-  font-style: bold;
+  margin-top: 0%;
+  margin-right: 0%;
+  margin-left: 70%;
+  margin-bottom: 1%;
+  padding-right: 0%;
+  background-color: #d59898;
+  border: 1px solid black;
+  text-align: center;
+  color: black;
 }
 
 #header2 {
- background-color: #8A716A;
- font-color: white;
- font-style: bold;
+  margin-top: 0%;
+  margin-right: 0%;
+  margin-left: 70%;
+  margin-bottom: 1%;
+  background-color: #c14543;
+  border: 1px solid black;
+  color: white;
+  text-align: center;
 }
 
-#header1 {
- background-color: #125E8A;
- font-color: white;
- font-style: bold;
+#header3 {
+  margin-top: 0%;
+  margin-right: 0%;
+  margin-left: 70%;
+  margin-bottom: 1%;
+  background-color: #e5d198;
+  border: 1px solid black;
+  text-align: center;
+  color: black;
 }
